force-app/main/default/objects/KimbleOne__MyTimesheetPreference__c/KimbleOne__MyTimesheetPreference__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>My Timesheet Preferences</label>
</CustomObject>