force-app/main/default/objects/KimbleOne__MyTimesheetPreference__c/fields/KimbleOne__DefaultToGridview__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__DefaultToGridview__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Default to Grid View?</label>
    <type>Checkbox</type>
</CustomField>