force-app/main/default/objects/KimbleOne__MyTimesheetPreference__c/fields/KimbleOne__DefaultTrackingPeriod__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__DefaultTrackingPeriod__c</fullName>
    <label>Default Tracking Period</label>
    <length>20</length>
    <type>Text</type>
</CustomField>