force-app/main/default/objects/KimbleOne__MyTimesheetPreference__c/fields/KimbleOne__ShowTimesheetToolTips__c.field-meta.xml
<CustomField>
    <fullName>KimbleOne__ShowTimesheetToolTips__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show Timesheet Tool Tips</label>
    <type>Checkbox</type>
</CustomField>